--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -13,6 +13,11 @@
 .link {
     margin-right: 20px;
     font-size: 20px;
+    text-decoration: none;
+}
+
+.link[aria-current="page"] {
+    color: red;
 }
 
 .link:hover {
